--- a/src/App.css
+++ b/src/App.css
@@ -1,79 +1,112 @@
-/* Estilos generales */
 body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
 }
 
-/* Barra de navegación */
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #333;
   color: white;
-  padding: 10px;
+  padding: 1em;
+  width: 100%;
 }
 
-/* Iconos y elementos en la barra de navegación */
+
 .navbar img {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
+  width: 2em;
+  height: 2em;
+  margin-right: 1em;
+  margin-left: 1em;
 }
 
-/* Estilo del buscador */
+
 .search-bar {
   flex-grow: 1;
-  margin: 0 10px;
+  margin: 0 1em;
 }
 
 .search-bar input {
   width: 75%;
-  /* Ocupa el 75% de la barra de arriba */
-  padding: 8px;
+  padding: 0.5em;
   border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 14px;
+  border-radius: 0.4em;
+  font-size: 1em;
 }
 
 .login-icon {
   margin-left: auto;
+  margin-right: 1em;
 }
 
-/* Contenedor principal de la aplicación */
+
 .main-container {
   display: flex;
 }
 
-/* Barra lateral izquierda con botones de filtro y cantidad */
+
 .sidebar {
-  width: 200px;
+  width: 12em;
   background-color: #eee;
-  padding: 10px;
+  padding: 1em;
 }
 
-/* Botones de filtro en la barra lateral */
+
 .sidebar button {
   display: block;
   width: 100%;
-  margin-bottom: 5px;
-  padding: 5px;
+  margin-bottom: 0.5em;
+  padding: 0.75em;
+  font-size: 1em;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 0.4em;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #45a049;
+  }
 }
 
-/* Contenido principal a la derecha de la barra lateral */
+.sidebar input[type="number"] {
+  width: 90%;
+  padding: 0.5em;
+  border: 1px solid #ccc;
+  border-radius: 0.4em;
+  font-size: 1em;
+  margin-bottom: 1em;
+}
+
 .content {
   flex-grow: 1;
-  padding: 20px;
+  padding: 1em;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1em;
 }
 
-/* Tarjeta de crédito */
 .credit-card {
   border: 1px solid #ccc;
-  padding: 15px;
-  border-radius: 8px;
+  padding: 1em;
+  border-radius: 0.8em;
   background-color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    margin-bottom: 1em;
+  }
+
+  .content {
+    grid-template-columns: 1fr;
+  }
 }
