--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
+  height: 100vh;
 }
 
 .navbar {
@@ -44,6 +45,7 @@ body {
 
 .main-container {
   display: flex;
+  height: 100%;
 }
 
 
@@ -99,11 +101,13 @@ body {
 @media screen and (max-width: 1000px) {
   .main-container {
     flex-direction: column;
+    height: 100%;
   }
 
   .sidebar {
     width: 100%;
     margin-bottom: 1em;
+    height: 100%;
   }
 
   .content {
